syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.models";

message BalanceCheck {
  int32 accountNumber = 1;
}

message Balance {
  int32 amount = 1;
}

service BankService {
  rpc getBalance(BalanceCheck) returns (Balance);
}